<?xml version="1.0"?>
<package format="2">
  <name>errt</name>
  <version>1.0.0</version>
  <description>Exploration-RRT Ros package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="akapat@ltu.se">aakapatel</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>dynamic_reconfigure</build_depend>

  <build_depend>ufomap</build_depend>
  <build_depend>ufomap_msgs</build_depend>
  <build_depend>ufomap_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>catkin_simple</build_depend>

  <exec_depend>ufomap</exec_depend>
  <exec_depend>ufomap_msgs</exec_depend>
  <exec_depend>ufomap_ros</exec_depend>
  <exec_depend>roscpp_serialization</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>mav_msgs</exec_depend>
  <exec_depend>mav_planning_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>eigen_catkin</exec_depend>
  <exec_depend>octomap_rviz_plugins</exec_depend>
  <exec_depend>octomap_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend> 




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
